# onnxruntime_vendor

./: CMakeLists.txt  README.md  package.xml
src/: onnxruntime_vendor-extras.cmake
